--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <div class="form_input_fields">
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Full Name</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="JOrge camargo">
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Full name">
               </div>
               <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email address</label>
@@ -254,7 +254,7 @@
                 <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
               </div>
-              <a herf="#" class="btn btn-primary SeeProjectBtn resume_btn">Submit</a>
+              <button type="submit" class="btn btn-submit SeeProjectBtn ">Get in Touch</a>
         </div>
       </form>
     </section>
